--- a/Tharga.Wpf.Sample/MainWindow.xaml
+++ b/Tharga.Wpf.Sample/MainWindow.xaml
@@ -1,12 +1,75 @@
-﻿<Window x:Class="Tharga.Wpf.Sample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Tharga.Wpf.Sample"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<fluent:RibbonWindow x:Class="Tharga.Wpf.Sample.MainWindow"
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:local="clr-namespace:Tharga.Wpf.Sample"
+                     xmlns:fluent="urn:fluent-ribbon"
+                     mc:Ignorable="d"
+                     Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <fluent:Ribbon Grid.Row="0">
+            <!--StartScreen-->
+            <fluent:Ribbon.StartScreen>
+                <fluent:StartScreen IsOpen="true">
+                    <fluent:StartScreenTabControl>
+                        <fluent:StartScreenTabControl.LeftContent>
+                            <StackPanel Orientation="Vertical">
+                                <Label Content="StartScreen"
+                                       FontSize="48"
+                                       Foreground="{DynamicResource Fluent.Ribbon.Brushes.IdealForegroundColorBrush}" />
+                            </StackPanel>
+                        </fluent:StartScreenTabControl.LeftContent>
 
+                        <fluent:StartScreenTabControl.RightContent>
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock VerticalAlignment="Center"
+                                           HorizontalAlignment="Center">You can close the start screen by either clicking the button below or by pressing ESC</TextBlock>
+                                <fluent:Button HorizontalAlignment="Center"
+                                               IsDefinitive="True">Close start screen</fluent:Button>
+                            </StackPanel>
+                        </fluent:StartScreenTabControl.RightContent>
+                    </fluent:StartScreenTabControl>
+                </fluent:StartScreen>
+            </fluent:Ribbon.StartScreen>
+            <!--QuickAccessItems-->
+            <fluent:Ribbon.QuickAccessItems>
+                <!--Use Content or Target Property to set QAT item-->
+                <fluent:QuickAccessMenuItem IsChecked="true">
+                    <fluent:Button Header="Pink" />
+                </fluent:QuickAccessMenuItem>
+
+                <!--You Can Just Bind with Any Control-->
+                <fluent:QuickAccessMenuItem Target="{Binding ElementName=buttonGreen}" />
+            </fluent:Ribbon.QuickAccessItems>
+            <!--Backstage-->
+            <fluent:Ribbon.Menu>
+                <fluent:Backstage>
+                    <fluent:BackstageTabControl>
+                        <fluent:BackstageTabItem Header="New" />
+                        <fluent:BackstageTabItem Header="Print" />
+                        <fluent:Button Header="Blue" />
+                    </fluent:BackstageTabControl>
+                </fluent:Backstage>
+            </fluent:Ribbon.Menu>
+            <!--Tabs-->
+            <fluent:RibbonTabItem Header="Home">
+                <fluent:RibbonGroupBox Header="Group">
+                    <fluent:Button Header="Green"/>
+                    <fluent:Button Header="Grey"/>
+                </fluent:RibbonGroupBox>
+            </fluent:RibbonTabItem>
+        </fluent:Ribbon>
+        <DockPanel Grid.Row="1" Margin="3" >
+            <TextBlock>Sample</TextBlock>
+        </DockPanel>
+        <fluent:StatusBar Grid.Row="2" Focusable="false">
+            <fluent:StatusBarItem Value="AAA" d:Value="Connected" HorizontalAlignment="Left" />
+        </fluent:StatusBar>
     </Grid>
-</Window>
+</fluent:RibbonWindow>
