--- a/Tharga.Wpf.Sample/App.xaml
+++ b/Tharga.Wpf.Sample/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application x:Class="Tharga.Wpf.Sample.App"
+﻿<wpf:ApplicationBase x:Class="Tharga.Wpf.Sample.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Tharga.Wpf.Sample"
+             xmlns:wpf="clr-namespace:Tharga.Wpf;assembly=Tharga.Wpf"
              StartupUri="MainWindow.xaml"
              ShutdownMode="OnMainWindowClose">
     <Application.Resources>
@@ -15,4 +16,4 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</wpf:ApplicationBase>
