--- a/Tharga.Wpf.Sample/MainWindow.xaml
+++ b/Tharga.Wpf.Sample/MainWindow.xaml
@@ -5,8 +5,10 @@
                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                      xmlns:local="clr-namespace:Tharga.Wpf.Sample"
                      xmlns:fluent="urn:fluent-ribbon"
+                     xmlns:wpf="clr-namespace:Tharga.Wpf;assembly=Tharga.Wpf"
                      mc:Ignorable="d"
-                     Title="MainWindow" Height="450" Width="800">
+                     Title="MainWindow" Height="450" Width="800"
+                     DataContext="{wpf:ViewModelProvider local:MainWindowModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
