--- a/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
+++ b/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
@@ -23,6 +23,6 @@
         <TextBlock x:Name="Environment" FontSize="12" Margin="10,20,0,0" d:Text="Environment" />
         <TextBlock x:Name="Version" FontSize="12" Margin="10,34,0,0" d:Text="1.0.0.0" />
         <TextBox x:Name="ErrorMessage" FontSize="10" Margin="5,155,5,5" d:Text="Error message" d:Visibility="Visible" Visibility="Collapsed" IsReadOnly="true" />
-        <Button x:Name="CloseButton" Click="ButtonBase_OnClick" Visibility="Collapsed" MinWidth="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" d:Visibility="Visible" Margin="0,0,10,10" Opacity=".3">Close</Button>
+        <!--<Button x:Name="CloseButton" Click="ButtonBase_OnClick" Visibility="Collapsed" MinWidth="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" d:Visibility="Visible" Margin="0,0,10,10" Opacity=".3">Close</Button>-->
     </Grid>
 </Window>
