--- a/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
+++ b/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
@@ -8,21 +8,23 @@
         Title="Splash"
         Height="250" Width="400"
         WindowStyle="None" ShowInTaskbar="false" AllowsTransparency="True"
-        Background="White"
+        Background="Transparent"
         WindowStartupLocation="CenterScreen" Topmost="false"
         BorderThickness="1" BorderBrush="Gray"
         >
     <Grid>
-        <ListBox x:Name="Messages" Background="White" Margin="85,90,85,55" Opacity=".8" FontWeight="Bold">
+        <Image Source="../../Images/Application/green.png" Stretch="Fill"/>
+        <TextBlock x:Name="FullName" d:Text="Some Name" Margin="10,10,10,10" FontSize="20" />
+        <ListBox x:Name="Messages" Background="Transparent" Margin="180,34,10,100" FontWeight="Bold">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Height" Value="22" />
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-        <TextBlock x:Name="Environment" FontSize="12" Margin="10,20,0,0" d:Text="Environment" />
-        <TextBlock x:Name="Version" FontSize="12" Margin="10,34,0,0" d:Text="1.0.0.0" />
-        <TextBox x:Name="ErrorMessage" FontSize="10" Margin="5,155,5,5" d:Text="Error message" d:Visibility="Visible" Visibility="Collapsed" IsReadOnly="true" />
-        <!--<Button x:Name="CloseButton" Click="ButtonBase_OnClick" Visibility="Collapsed" MinWidth="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" d:Visibility="Visible" Margin="0,0,10,10" Opacity=".3">Close</Button>-->
+        <TextBlock x:Name="Environment" FontSize="12" Margin="10,34,10,10" d:Text="Environment" />
+        <TextBlock x:Name="Version" FontSize="12" Margin="10,48,10,10" d:Text="1.0.0.0" />
+        <TextBox x:Name="ErrorMessage" FontSize="10" Margin="5,155,5,5" d:Text="Error message" d:Visibility="Visible" Visibility="Collapsed" IsReadOnly="true" Background="AliceBlue" />
+        <Button x:Name="CloseButton" Click="ButtonBase_OnClick" Visibility="Collapsed" MinWidth="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" d:Visibility="Visible" Margin="0,0,10,10">Close</Button>
     </Grid>
 </Window>
