--- a/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
+++ b/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
@@ -25,6 +25,6 @@
         <TextBlock x:Name="Environment" FontSize="12" Margin="10,34,200,195" d:Text="Environment" />
         <TextBlock x:Name="Version" FontSize="12" Margin="10,48,200,180" d:Text="1.0.0.0" />
         <TextBox x:Name="ErrorMessage" FontSize="10" Margin="5,155,5,5" d:Text="Error message" d:Visibility="Visible" Visibility="Collapsed" IsReadOnly="true" Background="AliceBlue" />
-        <Button x:Name="CloseButton" Click="ButtonBase_OnClick" Visibility="Collapsed" MinWidth="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" d:Visibility="Visible" Margin="0,0,10,10">Close</Button>
+        <Button x:Name="CloseButton" Click="ButtonBase_OnClick" Visibility="Collapsed" MinWidth="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" d:Visibility="Visible" Margin="0,0,10,10" Background="{DynamicResource PrimaryHueLightBrush}">Close</Button>
     </Grid>
 </Window>
