--- a/Tharga.Wpf.Sample/MyTabView.xaml
+++ b/Tharga.Wpf.Sample/MyTabView.xaml
@@ -1,11 +1,11 @@
-﻿<tabNavigator1:TabView x:Class="Tharga.Wpf.Sample.MyTabView"
+﻿<tabNavigator:TabView x:Class="Tharga.Wpf.Sample.MyTabView"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
          xmlns:local="clr-namespace:Tharga.Wpf.Sample"
-         xmlns:tabNavigator1="clr-namespace:Tharga.Wpf.Features.TabNavigator;assembly=Tharga.Wpf"
          xmlns:wpf="clr-namespace:Tharga.Wpf;assembly=Tharga.Wpf"
+         xmlns:tabNavigator="clr-namespace:Tharga.Wpf.TabNavigator;assembly=Tharga.Wpf"
          mc:Ignorable="d"
          DataContext="{wpf:ViewModelProvider local:MyTabViewModel}"
          d:DesignHeight="450" d:DesignWidth="800">
@@ -14,4 +14,4 @@
             <Label>This tab will allow close after 3 seconds.</Label>
         </StackPanel>
     </Grid>
-</tabNavigator1:TabView>
+</tabNavigator:TabView>
