--- a/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
+++ b/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="Tharga.Wpf.Features.ApplicationUpdate.Splash"
+﻿<Window x:Class="Tharga.Wpf.ApplicationUpdate.Splash"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Tharga.Wpf.Features.ApplicationUpdate"
         mc:Ignorable="d"
         Title="Splash"
         Height="250" Width="400"
