--- a/Tharga.Wpf/Features/TabNavigator/TabNavigatorView.xaml
+++ b/Tharga.Wpf/Features/TabNavigator/TabNavigatorView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Tharga.Wpf.Features.TabNavigator.TabNavigatorView"
+﻿<UserControl x:Class="Tharga.Wpf.TabNavigator.TabNavigatorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="http://prismlibrary.com/"
              xmlns:wpf="clr-namespace:Tharga.Wpf"
-             xmlns:tabNavigator="clr-namespace:Tharga.Wpf.Features.TabNavigator"
+             xmlns:tabNavigator="clr-namespace:Tharga.Wpf.TabNavigator"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
