--- a/Tharga.Wpf/Features/TabNavigator/TabTitleView.xaml
+++ b/Tharga.Wpf/Features/TabNavigator/TabTitleView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Tharga.Wpf.Features.TabNavigator.TabTitleView"
+﻿<UserControl x:Class="Tharga.Wpf.TabNavigator.TabTitleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
