--- a/Tharga.Wpf.Sample/MainWindow.xaml
+++ b/Tharga.Wpf.Sample/MainWindow.xaml
@@ -7,9 +7,10 @@
                      xmlns:fluent="urn:fluent-ribbon"
                      xmlns:wpf="clr-namespace:Tharga.Wpf;assembly=Tharga.Wpf"
                      xmlns:tabNavigator="clr-namespace:Tharga.Wpf.TabNavigator;assembly=Tharga.Wpf"
+                     xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
                      mc:Ignorable="d"
                      Title="MainWindow"
-                     DataContext="{wpf:ViewModelProvider local:MainWindowModel}"
+                     DataContext="{wpf:ViewModelProvider local:MainWindowViewModel}"
                      Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -55,7 +56,7 @@
             <fluent:Ribbon.Menu>
                 <fluent:Backstage>
                     <fluent:BackstageTabControl>
-                        <fluent:Button Header="Exit" Command="{Binding ExitCommand}" />
+                        <fluent:Button Header="Exit" Command="{Binding ExitCommand}" Icon="{svgc:SvgImage Exit.svg}" />
                         <!--<fluent:BackstageTabItem Header="Print" />
                         <fluent:Button Header="Blue" />-->
                     </fluent:BackstageTabControl>
@@ -65,8 +66,10 @@
             <fluent:RibbonTabItem Header="Home">
                 <fluent:RibbonGroupBox Header="Group">
                     <fluent:Button Header="Splash" Command="{Binding ShowSplashCommand}"/>
+                    <fluent:Button Header="Check for update" Command="{Binding CheckForUpdateCommand}"/>
                     <fluent:Button Header="Throw Exception" Command="{Binding ThrowExceptionCommand}"/>
                     <fluent:Button Header="Open tab" Command="{Binding NewTabCommand}"/>
+                    <fluent:Button Header="Open tab 2" Command="{Binding NewTabCommand2}"/>
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
         </fluent:Ribbon>
@@ -74,7 +77,7 @@
             <tabNavigator:TabNavigatorView />
         </DockPanel>
         <fluent:StatusBar Grid.Row="2" Focusable="false">
-            <fluent:StatusBarItem Value="Offline" d:Value="Connected" HorizontalAlignment="Left" />
+            <fluent:StatusBarItem Value="{Binding Message}" d:Value="Some message" HorizontalAlignment="Left" />
         </fluent:StatusBar>
     </Grid>
 </fluent:RibbonWindow>
