--- a/Tharga.Wpf.Sample/App.xaml
+++ b/Tharga.Wpf.Sample/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Tharga.Wpf.Sample"
              xmlns:wpf="clr-namespace:Tharga.Wpf;assembly=Tharga.Wpf"
-             StartupUri="MainWindow.xaml"
+             Startup="Application_Startup"
              ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
