--- a/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
+++ b/Tharga.Wpf/Features/ApplicationUpdate/Splash.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Splash"
-        Height="250" Width="400"
+        Height="309" Width="500"
         WindowStyle="None" ShowInTaskbar="false" AllowsTransparency="True"
         Background="Transparent"
         Topmost="true" Closed="Splash_OnClosed"
-        BorderThickness="1" BorderBrush="Gray"
+        BorderThickness="0" BorderBrush="Gray"
         >
     <Grid>
-        <Image Source="../../Images/Application/white.jpg" Stretch="Fill" x:Name="Image" />
+        <Image Source="../../Images/Application/white.png" Stretch="Fill" x:Name="Image" />
         <TextBlock x:Name="FullName" d:Text="Some Name" Margin="10,10,10,210" FontSize="20" />
         <ListBox x:Name="Messages" Background="Transparent" Margin="120,34,10,100" FontWeight="Bold" BorderBrush="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" MouseDoubleClick="Messages_OnMouseDoubleClick">
             <ListBox.ItemContainerStyle>
